syntax = "proto3";

package protogen;

import "google/protobuf/timestamp.proto";

option go_package = "e-wallet-app/protogen";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp issued_at = 3;
  google.protobuf.Timestamp expired_at = 4;

}